tests/v0-fail/ignore.out
Running <root>/ignore.cli ...

printf "hello\nworld\n"
---
hello
world
---
ERROR: pattern literal at line <root>/ignore.cli:7 does not match output line "world"
matching Sequence(["goodbye", End])
  matching "goodbye"
  -matching "hello" (ignore)
  -match: "hello" (ignore)
  -matching "hello" (ignore)
  -FAILED match: "world" (ignore)
  FAILED match: "world"

❌ FAIL

<root>/ignore.cli FAILED
Error: pattern literal at line <root>/ignore.cli:7 does not match output line "world"

